IO processing added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+    <link rel="stylesheet" href="app.js">
+    <!-- <script>
+        console.log("Hello script is working") ;
+    </script> -->
 </head>
 <body>
     <h1>talk banana</h1>
+    <textarea id="txt-input" placeholder="put your sentence in english here and  it will gwt converted into banana" style="width: 80%; height: 100px;"></textarea>
+    <button id="btn-translate">Translate</button>
+    <div>Output will come here</div>
+    <div id="output" style="border: 1px solid black ; height: 10vh; width: 80%;"></div>
+    
+    <script src="./app.js"></script>
 </body>
 </html>
