--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             box-sizing: border-box;
             margin: 0;
         }
-        #text113 {
+        textarea{
             max-width: 75%;
             margin: 2% 20%;
             border: 2px solid black;
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
         }
-        .but1{
+        .but{
             margin: 2vh 43%;
             width: 15%;
             padding: 1.5rem;
@@ -30,18 +30,18 @@
             border: 2px solid black;
             background-color: yellow;
         }
-        .head1{
+        .head{
             background-image: url(banana.webp);
             height: 20vh;
             background-attachment: fixed;
             text-align: center;
         }
-        .foot1{
+        .foot{
             background-image: url(banana.webp);
             height: 20vh;
             text-align: center;
         }
-        .text1{
+        .text{
             position: relative;
             top: 8vh;
             font-size: 2rem;
@@ -52,12 +52,12 @@
     </style>
 </head>
 <body>
-    <header class="head1"><span class="text1">Talk Banana Language</span></header>
-    <textarea name="text-inp" id="text113" cols="30" rows="10" placeholder="Enter your text here"></textarea>
-    <button class="but1">Submit</button>
-    <textarea name="text-out" id="text113" cols="30" rows="10" placeholder="Banana text will come here"></textarea>
+    <header class="head"><span class="text">Talk Banana Language</span></header>
+    <textarea name="text-inp" id="text-inp" cols="30" rows="10" placeholder="Enter your text here"></textarea>
+    <button class="but">Submit</button>
+    <textarea name="text-out" id="text-out" cols="30" rows="10" placeholder="Banana text will come here"></textarea>
 
-    <footer class="foot1"><span class="text1">Thanks for trying</span></footer>
+    <footer class="foot"><span class="text">Thanks for trying</span></footer>
     <script src="./banana.js"></script>
 </body>
 </html>
