--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <button class="but">Submit</button>
     <textarea name="text-out" id="text-out" cols="30" rows="10" placeholder="Banana text will come here"></textarea>
 
-    <footer class="foot"><span class="text">Thanks for trying</span></footer>
+    <footer class="foot"><span class="text"><a href="https://ritik-omega.netlify.app/"> Portfolio </a></span></footer>
     <script src="./banana.js"></script>
 </body>
 </html>
