--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon">
     <style>
         *{
             box-sizing: border-box;
@@ -54,6 +55,7 @@
             background-color: rgb(150, 150, 73);
         }
     </style>
+    
 </head>
 <body>
     <header class="head"><span class="text">Talk Banana Language</span></header>
