banana background added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         body{
             display: flex;
             flex-direction: column;
+            background-image: url(./minion-back.jpg);
         }
         .but{
             margin: 2vh 43%;
@@ -62,7 +63,6 @@
     <textarea name="text-inp" id="text-inp" cols="30" rows="10" placeholder="Enter your text here"></textarea>
     <button class="but">Submit</button>
     <textarea name="text-out" id="text-out" cols="30" rows="10" placeholder="Banana text will come here"></textarea>
-
     <footer class="foot"><span class="text"><a style="text-decoration: none; color: black;" href="https://ritik-omega.netlify.app/"> Portfolio </a></span></footer>
     <script src="./banana.js"></script>
 </body>
