--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
             height: 20vh;
             background-attachment: fixed;
             text-align: center;
+            border-bottom-right-radius: 15rem;
+            border-bottom-left-radius: 15rem;
         }
         .foot{
             background-image: url(banana.webp);
             height: 20vh;
             text-align: center;
+            border-top-right-radius: 15rem;
+            border-top-left-radius: 15rem;
         }
         .text{
             position: relative;
